grammar.js
        file: $ => repeat(choice(
            $.alias,
            $.function,
            $.assignment,
            $.comment,
            $.import,
            $.mod,
            $.recipe,
            $.setting,
            $.unexport,
        )),

        // ========================================================================================
        // Aliases

        alias: $ => seq(
            // Not all builtin attributes are supported in practice for aliases but that's not
            // the responsibility of Tree-Sitter
            repeat($._attribute_list),
            'alias',
            field('alias_name', $.identifier),
            ':=',
            $._identifier_path,
            $._ceol,
        ),

        // ========================================================================================
        // Assignments && Exports

        assignment: $ => seq(
            // Not all builtin attributes are supported in practice for assignements but that's not
            // the responsibility of Tree-Sitter
            repeat($._attribute_list),
            optional(choice(
              'eager',
              'export',
            )),
            field('name', $.identifier),
            ':=',
            $.expression,
            $._ceol,
        ),

        unexport: $ => seq(
            'unexport',
            field('name', $.identifier),
            $._ceol,
        ),

        // ========================================================================================
        // Functions (user-declared)

        import: $ => seq(
            'import',
            optional(imm('?')),
            alias($.string, $.path),
            $._ceol,
        ),

        mod: $ => prec.right(seq(
            // Technically only `doc` is a valid attribute on modules at the moment but that's okay
            repeat($._attribute_list),
            'mod',
            optional(imm('?')),
            field('name', $.identifier),
            optional(alias($.string, $.path)),
            $._ceol,
        )),

        // ========================================================================================
        // Recipes

        recipe: $ => seq(
            repeat($._attribute_list),
            optional('@'),
            field('name', $.identifier),
            optional($.recipe_parameters),
            ':',
            repeat($.recipe_dependency),
            optional(seq(
                '&&',
                repeat($.recipe_dependency),
            )),
            $._ceol,
            optional($.recipe_body),
        ),

        _attribute_list: $ => seq(
            '[',
            $.attribute,
            repeat(seq(',', $.attribute)),
            ']',
            $._ceol,
        ),

        // <https://just.systems/man/en/chapter_34.html?highlight=attribute#recipe-attributes>
        attribute: $ => seq(
            field('name', $.identifier),
            optional(choice(
                seq(':', $.string),
                seq(
                    '(',
                    $.expression,
                    repeat(seq(
                        ',',
                        choice(
                            $.attribute_named_parameter,
                            $.expression,
                        ),
                    )),
                    ')',
                ),
            )),
        ),

        recipe_dependency: $ => choice(
            $._identifier_path,
            seq('(', $._identifier_path, repeat($.expression), ')'),
        ),

        // In practice, Just supports multiple shebang lines as long as they're all at the top of the
        // recipe, but this is only for its own parsing: the first shebang lines interprets the second,
        // which interprets the third, and so on until an actual recipe line happens.
        // This situation is relevant almost only in Nix, where everything is bash anyway so let's not
        // try to parse it more than this as long as there is no issue reported with it.
        // NOTE: this was added in Just 1.34.0
        setting: $ => seq(
            'set',
            // Allows matching on the `shell` string in queries, used in helix to find the injection languague
            field('name', choice('shell', $.identifier)),
            choice(
                optional($._setting_boolean),
                $._setting_string,
                $._setting_list,
            ),
            $._ceol,
        ),
        _setting_boolean: $ => seq(':=', $.boolean),
        _setting_string: $ => seq(':=', $.string),
        _setting_list: $ => seq(':=', '[', $.string, repeat(seq(',', $.string)), optional(','), ']'),

        boolean: $ => choice('true', 'false'),

        // ========================================================================================
        // Expression

        expression: $ => prec.right(choice(
            seq('if', $.expression, '{', $.expression, '}', optional(seq('else', '{', $.expression, '}'))),
            seq('assert', $.assert_parameters),
            seq($.value, choice('/', '+'), $.expression),
            seq('/', $.expression),
            seq($.expression, '&&', $.expression),
            seq($.expression, '||', $.expression),
            seq($.expression, choice('==', '!='), $.expression),
            seq($.expression, choice('=~', '!~'), alias($.expression, $.regex)),
            $.value,
        )),

        assert_parameters: $ => seq('(', $.expression, ',', $.expression, ')'),

        value: $ => choice(
            $.function_call,
            seq('(', $.expression, ')'),
            seq('!', $.value),
            $.external_command,
            $.string,
            $.list,
            prec(-1, $.identifier),
            $.numeric_error,
        ),

        // <https://just.systems/man/en/chapter_32.html>
        function_call: $ => seq(field('name', $.identifier), '(', optional($.function_call_parameters), ')'),

        function_call_parameters: $ => $._comma_separated_expressions,

        _comma_separated_expressions: $ => seq($.expression, repeat(seq(',', $.expression)), optional(',')),

        // ========================================================================================
        // Backticks

        external_command: $ => choice(
            $._indented_format_backtick,
            $._format_backtick,
            $._indented_backtick,
            $._backtick,
        ),

        _format_backtick: $ => seq(
            "f`",
            // Expose `content` to allow injection of other languages (bash)
            alias(repeat(choice(
                '{{{{',
                $.interpolation,
                /[^`]/,
            )), $.content),
            "`",
        ),

        _indented_format_backtick: $ => seq(
            "f```",
            // Expose `content` to allow injection of other languages (bash)
            alias(repeat(choice(
                '{{{{',
                $.interpolation,
                // See `indented_normal_string`.
                /.[^`]?/,
            )), $.content),
            "```",
        ),

        _backtick: $ => seq(
            "`",
            // Expose `content` to allow injection of other languages (bash)
            alias(/[^`]*/, $.content),
            "`",
        ),

        _indented_backtick: $ => seq(
            "```",
            // See `indented_normal_string`.
            // Expose `content` to allow injection of other languages (bash)
            alias(repeat(/.[^`]?/), $.content),
            "```",
        ),

        // ========================================================================================
        // Strings

        string: $ => choice(
            $._indented_format_string,
            $._format_string,
            $._indented_normal_string,
            $._normal_string,
            $._indented_raw_format_string,
            $._raw_format_string,
            $._indented_raw_string,
            $._raw_string,
            $.shell_expanded_string,
        ),

        _indented_format_string: $ => seq(
            'f"""',
            repeat(choice(
                '{{{{',
                $.interpolation,
                $.escape_sequence,
                // See `indented_normal_string`.
                /.[^"]?/,
            )),
            '"""',
        ),

        _format_string: $ => seq(
            'f"',
            repeat(choice(
                '{{{{',
                $.interpolation,
                $.escape_sequence,
                /[^"]/,
            )),
            '"',
        ),

        _indented_normal_string: $ => seq(
            '"""',
            repeat(choice(
                $.escape_sequence,
                // Necessary to ensure escapes sequences are not eaten and that `<anything>"` does
                // not eat the `"` when it could be part of the end of the string.
                /.[^"]?/,
            )),
            '"""'
        ),

        _normal_string: $ => seq(
            '"',
            repeat(choice(
                $.escape_sequence,
                /[^"]/,
            )),
            '"',
        ),

        _indented_raw_format_string: $ => seq(
            "f'''",
            repeat(choice(
                '{{{{',
                $.interpolation,
                // See `indented_normal_string`.
                /.[^']?/,
            )),
            "'''",
        ),

        _raw_format_string: $ => seq(
            "f'",
            repeat(choice(
                '{{{{',
                $.interpolation,
                /[^']/,
            )),
            "'",
        ),

        _indented_raw_string: $ => seq(
            "'''",
            // See `indented_normal_string`.
            repeat(/.[^']?/),
            "'''",
        ),

        _raw_string: $ => seq(
            "'",
            /[^']*/,
            "'",
        ),

        identifier: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/,

        _identifier_path: $ => seq(
          repeat($.module_path),
          field('name', $.identifier),
        ),

        // Allows distinguish a module identifier from a item at the end of a path
        module_path: $ => seq(field('name', $.identifier), '::'),

        // Comments must be the last rule to match, so that anything that also matches `#.*` in some
        // way comes first in the list.
        comment: $ => prec(-1, token(seq('#', /.*/))),

        _ceol: $ => seq(optional($.comment), $._eol),

        // Numbers aren't allowed as values, but capturing them leads to better error recovery.
