test/corpus/aliases.txt
===
Alias: to same name
===

alias a := a

---

(file
  (alias
    (identifier)
    (identifier)))

===
Alias: to different name
===

alias a := b

---

(file
  (alias
    (identifier)
    (identifier)))

===
Alias: to module recipe
===

alias a := m1::m2::b

---

(file
  (alias
    (identifier)
    (module_path
      (identifier))
    (module_path
      (identifier))
    (identifier)))

===
Alias: with attribute
===

[private]
alias a := b

---

(file
  (alias
    (attribute
      (identifier))
    (identifier)
    (identifier)))
