test/corpus/backticks.txt
===
Backtick: empty
===

``

---

(file
  (expression
    (value
      (backtick))))

===
Backtick: with basic content
===

`raw string 🦀`

---

(file
  (expression
    (value
      (backtick))))

===
Backtick: with line breaks
===

`
  a line break
  or more`

---

(file
  (expression
    (value
      (backtick))))

===
Backtick: with escape sequences
===

`raw \t \n \r \\ \" string`

---

(file
  (expression
    (value
      (backtick))))
