test/corpus/expression_join.txt
===
Expression: Slash join
===

a := "a" / "b"

a := os() / arch()

a := env("HOME") / env("SUBPATH_CONFIG", 'default')

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string))
      (expression
        (value
          (string)))))
  (assignment
    (identifier)
    (expression
      (value
        (function_call
          (identifier)))
      (expression
        (value
          (function_call
            (identifier))))))
  (assignment
    (identifier)
    (expression
      (value
        (function_call
          (identifier)
          (function_call_parameters
            (expression
              (value
                (string))))))
      (expression
        (value
          (function_call
            (identifier)
            (function_call_parameters
              (expression
                (value
                  (string)))
              (expression
                (value
                  (string))))))))))

===
Expression: Plus join
===

a := "a" + "b"

a := os() + arch()

a := env("HOME") + env("SUBPATH_CONFIG", 'default')

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string))
      (expression
        (value
          (string)))))
  (assignment
    (identifier)
    (expression
      (value
        (function_call
          (identifier)))
      (expression
        (value
          (function_call
            (identifier))))))
  (assignment
    (identifier)
    (expression
      (value
        (function_call
          (identifier)
          (function_call_parameters
            (expression
              (value
                (string))))))
      (expression
        (value
          (function_call
            (identifier)
            (function_call_parameters
              (expression
                (value
                  (string)))
              (expression
                (value
                  (string))))))))))
