test/corpus/expression_operators.txt
===
Expression: `&&` operator
===

a := "a" && "b"

a := os() && arch()

a := env("HOME") && env("SUBPATH_CONFIG", 'default')

---

(file
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (string)))
      (expression
        (value
          (string)))))
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (function_call
            (identifier))))
      (expression
        (value
          (function_call
            (identifier))))))
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (function_call
            (identifier)
            (function_call_parameters
              (expression
                (value
                  (string)))))))
      (expression
        (value
          (function_call
            (identifier)
            (function_call_parameters
              (expression
                (value
                  (string)))
              (expression
                (value
                  (string))))))))))

===
Expression: `||` operator
===

a := "a" || "b"

a := os() || arch()

a := env("HOME") || env("SUBPATH_CONFIG", 'default')

---

(file
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (string)))
      (expression
        (value
          (string)))))
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (function_call
            (identifier))))
      (expression
        (value
          (function_call
            (identifier))))))
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (function_call
            (identifier)
            (function_call_parameters
              (expression
                (value
                  (string)))))))
      (expression
        (value
          (function_call
            (identifier)
            (function_call_parameters
              (expression
                (value
                  (string)))
              (expression
                (value
                  (string))))))))))

===
Expression: `&&` and `||` operators
===

a := "a" && "b" || "c"

a := "a" || "b" && "c"

---

(file
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (string)))
      (expression
        (expression
          (value
            (string)))
        (expression
          (value
            (string))))))
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (string)))
      (expression
        (expression
          (value
            (string)))
        (expression
          (value
            (string)))))))

===
Expression: `!` operator
===

a := !"a"

a := os() && !arch()

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (value
          (string)))))
  (assignment
    (identifier)
    (expression
      (expression
        (value
          (function_call
            (identifier))))
      (expression
        (value
          (value
            (function_call
              (identifier))))))))

===
Expression: `++` operator
===

a := os() ++ !arch()

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (function_call
          (identifier)))
      (expression
        (value
          (value
            (function_call
              (identifier))))))))
